# claude-code-analytics

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_PROCESS.md  CONTRIBUTING.md  README.md  SECURITY.md  TESTING.md  index.html  install.sh  pyproject.toml  python-scanner-implementation.md  run_dashboard.sh  test_search.py  uninstall.sh
.github/workflows/: tests.yml
Formula/: claude-code-analytics.rb
claude_code_analytics/: .env.example  __init__.py  cli.py  config.py
claude_code_analytics/api/: app.py  dependencies.py
claude_code_analytics/api/routers/: active.py  analysis.py  analytics.py  bookmarks.py  events.py  examples.py  import_data.py  projects.py  search.py  sessions.py  similar.py
claude_code_analytics/api/services/: event_bus.py  file_watcher.py  import_service.py  process_scanner.py
claude_code_analytics/models/: __init__.py  analysis_models.py  database_models.py
claude_code_analytics/scanner/: __init__.py  base.py  gitleaks.py  multi_layer.py  regex_scanner.py
claude_code_analytics/scripts/: LOGGING.md  analyze_session.py  cleanup_sdk_sessions.py  create_database.py  create_fts_index.py  demo_embeddings.py  embed_conversations.py  import_conversations.py  search_conversations.py  search_fts.py  test_batch_import.py  test_incremental_import.py
claude_code_analytics/services/: __init__.py  analysis_service.py  database_service.py  embedding_service.py  format_utils.py  gist_publisher.py  llm_providers.py  session_filter.py
claude_code_analytics/streamlit_app/: README.md  app.py
claude_code_analytics/streamlit_app/models/: database_models.py
claude_code_analytics/streamlit_app/pages/: about.py  analysis.py  analytics.py  browser.py  conversation.py  import_data.py  search.py
claude_code_analytics/streamlit_app/services/: __init__.py  analysis_service.py  database_service.py  gist_publisher.py  llm_providers.py
demo/: README.md  active-sessions-script.json  run_demo.py
docs/: HOMEBREW_STATUS.md  RELEASE_CHECKLIST.md  active-session-monitor-proposal.md  advanced-usage.md  agent-knowledge-retention.md  architecture.md  configuration.md  homebrew-packaging.md  homebrew-testing-notes.md  index.html  manual-installation.md  prompt-discovery-proposal.md  prompt-effectiveness-and-session-similarity.md  react-frontend-proposal.md  search-feature-requirements.md  session-similarity-implementation-plan.md  session-similarity-search-proposal.md  troubleshooting.md
docs/technical/: ANALYSIS_SCOPING_FEATURE.md  python-scanner-implementation.md  search-feature-requirements.md
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: activity-heatmap.tsx  app-sidebar.tsx  command-palette.tsx
frontend/src/components/charts/: active-time-bar-chart.tsx  messages-area-chart.tsx  messages-by-project-donut.tsx  token-area-chart.tsx  token-timeline-chart.tsx
frontend/src/components/conversation/: bookmark-dialog.tsx  conversation-message.tsx  conversation-minimap.tsx  conversation-viewer.tsx  scroll-progress.tsx  (+1 more)
frontend/src/hooks/: use-event-source.ts
frontend/src/lib/: format.ts
frontend/src/pages/: active.tsx  analysis.tsx  analytics.tsx  bookmarks.tsx  dashboard.tsx  examples.tsx  import.tsx  search.tsx  session-detail.tsx  sessions.tsx
hooks/: export-conversation.sh  pretty-print-transcript.py
monolog/: posts.md
prompts/: metadata.yaml
prototypes/session-similarity/: README.md  hybrid_search_prototype.py
scripts/: analyze_session.py  create_database.py  create_fts_index.py  import_conversations.py
streamlit_app/: app.py
streamlit_app/models/: analysis_models.py
streamlit_app/pages/: analysis.py  browser.py  conversation.py  search.py
streamlit_app/services/: analysis_service.py  database_service.py
test-specs/: test_analysis_router.md  test_analysis_service.md  test_app.md  test_database_service.md  test_embedding_service.md  test_format_utils.md  test_gist_publisher_live.md  test_import_service.md  test_llm_providers.md  test_session_filter.md  test_similar.md
tests/: __init__.py  test_analysis_router.py  test_analysis_service.py  test_app.py  test_database_service.py  test_embedding_service.py  test_format_utils.py  test_gist_publisher_live.py  test_import_service.py  test_llm_providers.py  test_scanner.py  test_scanner_integration.py  test_session_filter.py  test_similar.py
