[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-analytics"
version = "0.1.0"
description = "Analytics platform for Claude Code conversations"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sujan Kapadia"}
]
requires-python = ">=3.9"
keywords = ["claude", "code", "analytics", "streamlit", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "altair>=5.0.0",
    "google-generativeai>=0.3.0",
    "openai>=1.0.0",
    "jinja2>=3.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/sujankapadia/claude-code-utils"
Documentation = "https://github.com/sujankapadia/claude-code-utils#readme"
Repository = "https://github.com/sujankapadia/claude-code-utils"
Issues = "https://github.com/sujankapadia/claude-code-utils/issues"

[project.scripts]
claude-code-analytics = "claude_code_analytics.cli:dashboard"
claude-code-import = "claude_code_analytics.cli:import_conversations"
claude-code-search = "claude_code_analytics.cli:search"
claude-code-analyze = "claude_code_analytics.cli:analyze"

[tool.setuptools]
packages = ["claude_code_analytics"]

[tool.setuptools.package-data]
claude_code_analytics = [
    "streamlit_app/**/*",
    "scripts/**/*",
    "prompts/**/*",
    "hooks/**/*",
    ".env.example",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

# Enable select linting rules
[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by black)
    "E722",   # bare except (intentional for simple error handling)
    "E402",   # module import not at top (intentional for path manipulation)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # exception chaining (can be added incrementally)
    "B905",   # zip without explicit strict parameter
    "ARG001", # unused function argument (common in callbacks)
    "ARG002", # unused method argument (common in overrides)
    "SIM102", # nested if simplification (readability preference)
    "SIM115", # context manager (tempfile pattern is intentional)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["ARG", "S", "F841"]  # Allow unused args, security issues, and unused variables in tests

[tool.bandit]
exclude_dirs = ["tests", "test_*.py", "demo_*.py"]
skips = [
    "B101",  # assert_used (we use assert in tests)
    "B110",  # try_except_pass (intentional error suppression in non-critical code)
    "B112",  # try_except_continue (intentional error handling in loops)
    "B404",  # import_subprocess (intentional use for CLI - subprocess is required)
    "B603",  # subprocess_without_shell (false positive - NOT using shell=True is secure)
    "B608",  # hardcoded_sql_expressions (false positive - we use parameterized queries correctly)
    "B701",  # jinja2_autoescape_false (not applicable - generating markdown/text, not HTML)
]
# Note: B607 (start_process_with_partial_path) is NOT skipped - we use shutil.which() to resolve full paths

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_strict_optional = true
exclude = [
    "tests/",
    "claude_code_analytics/scripts/test_",
    "claude_code_analytics/scripts/demo_",
]
